@@ -2,7 +2,7 @@
 
 Updated: May 23, 2024
 
-Current Version: "0.9.5"
+Current Version: "0.9.6"
 
 License/Copying: GNU LGPL Version 2 or Version 3, your choice. Any other license terms are only available directly from the author in writing.
 
